--- a/Clash/config/ACL4SSR_Online.ini
+++ b/Clash/config/ACL4SSR_Online.ini
@@ -24,7 +24,7 @@ ruleset=🚀 节点选择,https://raw.staticdn.net/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=🎯 全球直连,https://raw.staticdn.net/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.staticdn.net/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🌍 国外媒体,rules/Custom/Clash/ForeignCustom.list
-ruleset=🎯 全球直连,rules/Custom/Clash/ChinaCustom.list
+; ruleset=🎯 全球直连,rules/Custom/Clash/ChinaCustom.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
